# neural_networks

./: NeuralNetworkGraph.py  Readme.md  main.py  perceptron.py  plot.py  pyproject.toml  test.py  utils.py
nets/: adaline.py  perceptron.py
nets/activationFunction/: binary_sigmoid.py  bipolar_sigmoid.py
nets/adaline/: adaline.py
nets/madaline/: madaline.py
nets/mlp/: multilayer_perceptron.py
nets/perceptron/: perceptron.py  perceptron_with_bias.py
nets/rnn/: recurrent_neural_network.py
nets/utils/: utils.py
nets/utils/others/: layer.py  neural_network_graph.py  neuron.py
resources/: and.csv  or_binary_input_bipolar_target.csv  xor_binary_input_bipolar_target.csv  xor_bipolar_input_bipolar_target.csv
src/: main.py
src/keras/: classification.py  example.py
src/nets/activationFunction/: binary_sigmoid.py  bipolar_sigmoid.py
src/nets/adaline/: adaline.py
src/nets/exemplo/: RNN_applic_withBias.py  RNN_withBias.py  generate_string.py  grammar.json  inputD.txt  inputL.txt  outputD.txt  outputL.txt  plotting.py
src/nets/mlp/: multilayer_perceptron.py
src/nets/perceptron/: perceptron.py  perceptron_with_bias.py
src/nets/rnn/: recurrent_neural_network.py  rnn_weights.txt
src/nets/utils/: utils.py
