[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Thanner Soares Silva <thannersoares@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.18.4"
pandas = "^1.0.3"
theano = "^1.0.4"
tensorflow = "^2.2.0"
Keras = "^2.3.1"
matplotlib = "^3.2.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
